--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <div class="block">
             <h3>Block 1</h3>
             <div class="btn-container">
-                <button data-audio-src="sounds/wtf.mp3" type="button"
-                    class="audio-btn btn small btn-primary">WTF</button>
+                <button data-audio-src="sounds/disgust.mp3" type="button"
+                    class="audio-btn btn small btn-primary">噁心</button>
 
                 <button data-audio-src="sounds/0.mp3" type="button"
                     class="audio-btn btn small btn-primary">0</button>
 
-                <button data-audio-src="sounds/wtf.mp3" type="button"
-                    class="audio-btn btn small btn-primary">asdavc</button>
+                <button data-audio-src="sounds/baby.mp3" type="button"
+                    class="audio-btn btn small btn-primary">baby</button>
 
                 <button data-audio-src="sounds/wtf.mp3" type="button"
                     class="audio-btn btn small btn-primary">WTF</button>
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <div class="block">
+<!--    <div class="block">
             <h3>Block 2</h3>
             <div class="btn-container">
                 <button type="button" class="audio-btn btn small btn-secondary">Secondary</button>
@@ -125,8 +125,8 @@
             <div class="btn-container">
                 <button type="button" class="audio-btn btn small btn-info">Info</button>
             </div>
-        </div>
-    </div>
+        </div>    -->
+    </div>  
 
 
     <script>
