--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 <body>
     <div id="root">
 
-        <!-- <p> <font size="6"> <strong> 阿耿按鈕 </strong> </font>> </p>  -->
+         <p> <font size="6"> <strong> 阿耿按鈕 </strong> </font> </p>  
 
-        <h2><strong>阿耿按鈕</strong></h2>
+        <!-- <h2><strong>阿耿按鈕</strong></h2>-->
 
         <div class="block">
-            <h3></h3>
+            <h3>0</h3>
             <div class="btn-container">
                 <button data-audio-src="sounds/disgust.mp3" type="button"
                     class="audio-btn btn small btn-primary">好噁喔</button>
@@ -78,13 +78,26 @@
             </div>
         </div>
 
-<!--    <div class="block">
-            <h3>Block 2</h3>
+    <div class="block">
+            <h4>亂叫專區</h4>
             <div class="btn-container">
-                <button type="button" class="audio-btn btn small btn-secondary">Secondary</button>
+
+                <button  data-audio-src="sounds/ennaifgujnhifg.mp3" type="button" 
+                    class="audio-btn btn small btn-secondary">0</button>
+
+                <button data-audio-src="sounds/ennnaminion.mp3" type="button" 
+                    class="audio-btn btn small btn-secondary">1</button>
+
+                <button data-audio-src="sounds/dadadadada945766.mp3" type="button"
+                    class="audio-btn btn small btn-secondary">DADA</button>
+
+
+
+
+
             </div>
         </div>
-
+<!--
         <div class="block">
             <h3>Block 3</h3>
             <div class="btn-container">
