--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <button data-audio-src="sounds/poisoin.mp3" type="button" 
                     class="audio-btn btn small btn-primary">獨獨獨獨擋掉</button>
 
-                <button data-audio-src="sounds/DUDUDU.mp3" type="button" 
+                <button data-audio-src="sounds/DUDUDU2.mp3" type="button" 
                     class="audio-btn btn small btn-primary">BlackPINK</button>
 
             
